--- a/sobre.html
+++ b/sobre.html
@@ -24,7 +24,7 @@ participação em 118 deles.
 distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:
 </p>
 
-<figure>
+<figure id="centro-distribuicao">
     <img src="img/centro-distribuicao.png" alt="Centro de Distribuição">
     <figcaption>Centro de Distribuição da Mirror Fashion</figcaption>
 </figure>
@@ -36,7 +36,7 @@ se tiver dúvidas. Conheça também nossa <a href="#historia">história</a> e no
 
 <h2 id="historia">História</h2>
 
-<figure>
+<figure id="familia-pelho">
     <img src="img/familia-pelho.jpg" alt="Família Pelho">
     <figcaption>Família Pelho</figcaption>
 </figure>
@@ -79,6 +79,12 @@ Fashion, além de presidentes da União Européia, Ásia e o secretário-geral d
     <li>Presente em 124 países</li>
     <li>Mais de um milhão de funcionários em todo o mundo</li>
 </ul>
+
+<div id="rodape">
+    <img src="img/logo.png">
+
+    &copy: Copyright Mirror Fashion
+</div>
     
 </body>
 </html>
